== 3030-12-31 Getting Started
<p>If you're new to Constellation, read the <a href="" helpId="au.gov.asd.tac.constellation.functionality.gettingstarted">getting started guide</a>.</p>

== 2022-01-24 Histogram Bins Selected Count
<p>The Histogram now shows the amount of bins selected out of the total bins present.</p>

== 2021-12-16 Quality Control Categories
<p>The dialog to change the Quality Control category levels will now show when the level is different from the default.</p>

== 2021-11-23 Context Menu
<p>The right-click context menu in the graph window has been updated to include Selection and Reset View options.</p>

== 2021-11-02 Data Access View Templates
<p>A bug relating to the Data Access View template structure has been resolved. Unfortunately this change means that existing DAV templates will no longer work and therefore they will need to be re-created.</p>

== 2021-10-29 New Online & Offline Help
<p>The help documentation is now able to be viewed both online through the constellation-app.com website and offline through a local server.</p>
<p>A preference has been added where you choose to view help documentation either online or offline. This can be found via 
Setup -> Options -> CONSTELLATION -> Help -> Online Help. The help documentation is accessible through the blue question mark icons found in each view. </p>

== 2021-10-27 Layers View Graph Context
<p> Layers View now requires a graph to be present before presenting the full feature set of the view.</p>

== 2021-10-20 Conversation Search scroll
<p> When searching in the conversation viewer you will be taken to the messages that contain the search term.</p>
<p> You can also iterate through the search terms using the new buttons</p>

== 2021-10-18 Data Access View
<p>There is a known issue with the Data Access View that it will open in the graph tab section during the latest update.