@@ -1,0 +1,7 @@
+name,ab cd,Source@Type,Transaction.Time,Time.test,news
+111,6,7,2009-12-05 23:59:59,2009-12-1,3
+222,7,1,2009-12-15 23:59:59,2009-12-12,4
+333,a,,2009-12-25 23:59:59,2009-12-31,5
+444,6,7,2009-12-05 23:59:59,2009-12-1,6
+555,,7,2008-12-08 23:59:59,2008-12-1,7
+ 
